<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".woofshop_view_product">

    <!--Top menue bar begis-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorTopMenueBackgroud"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_logo_top"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/baloo"
            android:text="@string/app_top_txtShop"
            android:textColor="@color/colorTheme"
            android:textSize="50sp" />

    </LinearLayout>
    <!--Top menue bar ends-->

    <!--body start-->

    <!--Bottom navigation bar begins-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp">

        <ImageView
            android:id="@+id/btn_cart_prod"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/woofshop_cart_txtCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_bottomnavibar_shop" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="164dp"
            android:layout_height="159dp"
            android:contentDescription="@string/woofshop_txtProductname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182"
            app:srcCompat="@drawable/spikecollar" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="159dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/woofshop_productname"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/view_post_desc" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="19dp"
            android:text="@string/woofshop_txtprice"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/woofshop_price"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/woofshop_stock"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <TextView
            android:id="@+id/view_post_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="76dp"
            android:text="@string/woofshop_txtProductname"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="13dp"
            android:text="@string/woofshop_txtStock"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="371dp"
            android:layout_height="89dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="1dp"
            android:text="@string/woofshop_description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="56dp"
            android:text="@string/woofshop_txtDescription"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/woofshop_txtQuantity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <EditText
            android:id="@+id/editTextNumberSigned2"
            android:layout_width="114dp"
            android:layout_height="39dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19" />

        <Button
            android:id="@+id/button"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_login_fill"
            android:text="@string/woofshop_btn_addtocart"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--body end-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/app_bottom_navigationbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBtnblack"
        app:itemIconSize="50dp"
        app:itemIconTint="@drawable/app_bottom_navibar_selector"
        app:menu="@menu/app_bottom_navibar_menue" />

    <!--Bottom navigation bar Ends-->

</RelativeLayout>